<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/card_owner_name" />

            <EditText
                android:id="@+id/card_owner_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60" />

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/card_number" />

            <EditText
                android:id="@+id/card_number_edittext"
                android:layout_width="0dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_weight="60" />

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/expire_date" />

            <EditText
                android:id="@+id/expire_date_edittext_1"
                android:layout_width="0dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_weight="25" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="10"
                android:text="/" />
            <EditText
                android:id="@+id/expire_date_edittext_2"
                android:layout_width="0dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_weight="25" />

        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        style="@style/buttonStyle"
        android:id="@+id/add_card_dialog_button"
        android:text="@string/add_card"/>

</LinearLayout>