<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="client.android.paying.com.payingmobileclient.TableDetailActivity">

    <TableLayout
        android:id="@+id/amount_tablelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Tutar" />

            <TextView
                android:id="@+id/amount_textview"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:width="0dp" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Odenen" />

            <TextView
                android:id="@+id/amount_paid_textview"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:width="0dp" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Kalan" />

            <TextView
                android:id="@+id/amount_will_be_paid_textview"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:width="0dp" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/amount_tablelayout"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            style="@style/headerStyle"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/item_list_header" />

        <ListView
            android:id="@+id/items_list_view"
            android:layout_width="fill_parent"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content">

        </ListView>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">


            <EditText
                android:id="@+id/amount_to_pay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:hint="@string/enter_amount_to_pay"
                android:inputType="number" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/headerStyle"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/pick_a_card" />

        <ListView
            android:id="@+id/credit_cards_listview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </ListView>


    </LinearLayout>


</RelativeLayout>
